; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/media/omap4iss/extr_iss.c_iss_get_clocks.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/media/omap4iss/extr_iss.c_iss_get_clocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iss_device = type { i8*, i32, i8* }

@.str = private unnamed_addr constant [8 x i8] c"iss_fck\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"Unable to get iss_fck clock info\0A\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"iss_ctrlclk\00", align 1
@.str.3 = private unnamed_addr constant [38 x i8] c"Unable to get iss_ctrlclk clock info\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iss_device*)* @iss_get_clocks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iss_get_clocks(%struct.iss_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.iss_device*, align 8
  store %struct.iss_device* %0, %struct.iss_device** %3, align 8
  %4 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %5 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 8
  %7 = call i8* @devm_clk_get(i32 %6, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %9 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %8, i32 0, i32 2
  store i8* %7, i8** %9, align 8
  %10 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %11 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %10, i32 0, i32 2
  %12 = load i8*, i8** %11, align 8
  %13 = call i64 @IS_ERR(i8* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %1
  %16 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %17 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @dev_err(i32 %18, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0))
  %20 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %21 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %20, i32 0, i32 2
  %22 = load i8*, i8** %21, align 8
  %23 = call i32 @PTR_ERR(i8* %22)
  store i32 %23, i32* %2, align 4
  br label %46

24:                                               ; preds = %1
  %25 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %26 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 8
  %28 = call i8* @devm_clk_get(i32 %27, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %29 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %30 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %29, i32 0, i32 0
  store i8* %28, i8** %30, align 8
  %31 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %32 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %31, i32 0, i32 0
  %33 = load i8*, i8** %32, align 8
  %34 = call i64 @IS_ERR(i8* %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %45

36:                                               ; preds = %24
  %37 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %38 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 8
  %40 = call i32 @dev_err(i32 %39, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.3, i64 0, i64 0))
  %41 = load %struct.iss_device*, %struct.iss_device** %3, align 8
  %42 = getelementptr inbounds %struct.iss_device, %struct.iss_device* %41, i32 0, i32 0
  %43 = load i8*, i8** %42, align 8
  %44 = call i32 @PTR_ERR(i8* %43)
  store i32 %44, i32* %2, align 4
  br label %46

45:                                               ; preds = %24
  store i32 0, i32* %2, align 4
  br label %46

46:                                               ; preds = %45, %36, %15
  %47 = load i32, i32* %2, align 4
  ret i32 %47
}

declare dso_local i8* @devm_clk_get(i32, i8*) #1

declare dso_local i64 @IS_ERR(i8*) #1

declare dso_local i32 @dev_err(i32, i8*) #1

declare dso_local i32 @PTR_ERR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
